2014-12-20  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_WITH_EXPORT_SYMS:
	don't inherit an EXPORT_SYMS value (no need to, yet)

	* AcSplit/CF_WITH_VERSIONED_SYMS:
	introduce an intermediate ".map" file to allow ncurses to modify the
	file with a sed-script

	* AcSplit/CF_LIB_RULES:
	provide a way to specify abi-version in ".map" files

2014-12-13  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_ENABLE_PC_FILES:
	allow pc-files to be configured when pkg-config is missing

	* AcSplit/CF_WITH_PKG_CONFIG_LIBDIR:
	if pkg-config is missing, try to fill in some of the directory location.

	* AcSplit/CF_PKG_CONFIG: warn if pkg-config is missing

2014-12-04  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_SUBDIR_PATH:
	change this to a loop, adding /usr/pkg (NetBSD) and /opt/local (Mac OSX)

2014-11-30  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_GNUTLS:
	add configure check for gnutls_rnd, not present in 2.8.6
	drop -lcrypt if gnutls_rnd is found, to reduce libraries used.
	drop -lgnutls-extra, not needed with 2.8.6 or later, e.g. Debian 6

	* AcSplit/CF_CHECK_SSL_X509:
	partial fix: check for the correct header if this is gnutls

2014-11-15  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_WITH_EXPORT_SYMS:
	split-out EXPORT_SYMS variable to avoid conflicting use of $LIBTOOL_OPTS

	* AcSplit/CF_WITH_LIBTOOL: use top_srcdir

	* AcSplit/CF_WITH_VERSIONED_SYMS:
	use top_srcdir to find package directory
	attempt to support Solaris (won't happen right away, but this is a start)

	* AcSplit/CF_DISABLE_LIBTOOL_VERSION:
	when using -version-info (the native libtool mode), get the ABI_VERSION
	value from $VERSION (which comes from CF_VERSION_INFO)

2014-11-02  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_WITH_LIBTOOL_OPTS: append to LIBTOOL_OPTS

	* AcSplit/CF_WITH_EXPORT_SYMS, AcSplit/CF_WITH_VERSIONED_SYMS:
	ci-aclocal generated header

	* AcSplit/CF_WITH_SHARED_OR_LIBTOOL: