@@ -1,3 +1,7 @@
+2014-12-22  Thomas E. Dickey  <dickey@invisible-island.net>
+
+	* AcSplit/CF_WITH_MAN2HTML: ci-aclocal generated header
+
 2014-12-20  Thomas E. Dickey  <dickey@invisible-island.net>
 
 	* AcSplit/CF_WITH_EXPORT_SYMS:
